# nyc-taxi-hourly-trip-forecasting

./: .gitignore  FEATURE_SET.md  GUIDE.md  README.md  RESEARCH_PIPELINE.md  pyproject.toml  requirements.txt
notebooks/: 01_EDA.ipynb
outputs/eda/summaries/: eda_summary.txt  eda_zoom_timeseries_summary.txt
outputs/experiments/comparative_evaluation_revisi_1/summaries/: comparative_evaluation_revisi_1_summary.md
outputs/experiments/experiment_a_revisi_1/summaries/: baseline_report_comparison.md  (+1 more)
outputs/features/summaries/: feature_engineering_summary.txt
outputs/reports/: comparative_evaluation.md  conclusion.md  conclusion_revisi_1.md  dm_test_revisi_1.md  error_analysis.md  error_analysis_revisi_1.md  experiment_a_prophet_vs_xgb_basic.md  experiment_a_revisi_1_prophet_regressor_basic_vs_xgb_basic.md  experiment_b_xgb_basic_vs_xgb_advanced.md  final_test_report.md  final_test_revisi_1_prophet_regressor_basic_vs_xgb_basic.md  model_interpretability.md  model_interpretability_revisi_1.md
scripts/: run_dm_test.py
src/: __init__.py  config.py  data_loading.py  features.py  forecasting.py  metrics.py  preprocessing.py  splits.py  statistical_tests.py  tracking.py
src/experiments/: __init__.py  compare_models.py  dm_test.py  error_analysis.py  experiment_a.py  experiment_b.py  final_test.py  model_interpretability.py  retrain_best_models.py  retrain_prophet_regressor_basic.py  sarima_sanity_test.py  tune_prophet.py  tune_xgb_advanced.py  tune_xgb_basic.py  tuning_utils.py
src/models/: __init__.py  prophet_model.py  xgboost_model.py
(+8 files in other folders)
