[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi-forecasting"
version = "0.1.0"
description = "Time series forecasting research: Prophet vs XGBoost on NYC Taxi hourly data"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "prophet>=1.1.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "shap>=0.45.0",
    "pytz>=2023.3",
    "pmdarima>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
